Refactored data loading and chunking, added docstrings, comments, and markdown overview.
- Created separate function for data loading and chunking with parameters for chunk size and overlap, providing user control over these settings.
- Added detailed docstrings for functions to enhance understanding.
- Included necessary comments throughout the code.
- Updated markdown content to provide an overview of the code's purpose and functionality.

--- a/hybrid_search.ipynb
+++ b/hybrid_search.ipynb
@@ -5,33 +5,71 @@
    "id": "69f1f400-d2a7-4a85-8e8f-56df23b9c7bb",
    "metadata": {},
    "source": [
-    "## Combining BM25 and Semantic Search"
+    "## Combining BM25 and Semantic Search\n",
+    "\n",
+    "In this notebook we will compare the context relevance between normal retriever `(Semantic search)` and `Hybrid Search` (Which is the combination of Keyword based search and semantic search) . We will use Uptrain for finding relevance score .\n",
+    "\n",
+    "1. Semantic Search: This is a search technique that uses embeddings to understand the context and meaning of the query and documents. It goes beyond simple keyword matching by capturing the semantic meaning of the text.\n",
+    "2. Hybrid Search: This combines both keyword-based search (like BM25) and semantic search. The idea is to leverage the strengths of both methods to improve the relevance of search results."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e16982d8-0635-47ff-b69a-6abcb6d4d5a5",
+   "id": "6d2e56d9",
    "metadata": {},
    "source": [
-    "#### In this notebook we will compare the context relevance between normal retriever (Semantic search) and Hybrid Search (Which is the combination of Keyword based search and semantic search) . We will use Uptrain for finding relevance score ."
+    "### Importing the dependencies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "id": "19ddf75c-5dad-49d6-b200-d6b2bdb1ae15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
+     ]
+    }
+   ],
    "source": [
-    "from langchain.embeddings import  OpenAIEmbeddings  \n",
-    "from langchain.vectorstores import FAISS \n",
-    "from langchain.retrievers import BM25Retriever ,EnsembleRetriever\n",
-    "from langchain.chat_models import ChatOpenAI \n",
+    "# Importing OpenAIEmbeddings for creating embeddings\n",
+    "from langchain.embeddings import OpenAIEmbeddings  \n",
+    "\n",
+    "# Importing FAISS for creating a vector store\n",
+    "from langchain.vectorstores import FAISS  \n",
+    "\n",
+    "# Importing BM25Retriever and EnsembleRetriever for retrieval tasks\n",
+    "from langchain.retrievers import BM25Retriever, EnsembleRetriever  \n",
+    "\n",
+    "# Importing ChatOpenAI for chat models\n",
+    "from langchain.chat_models import ChatOpenAI  \n",
+    "\n",
+    "# Importing RecursiveCharacterTextSplitter for splitting text into chunks\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter  \n",
-    "from langchain.document_loaders import WebBaseLoader\n",
-    "from langchain_core.output_parsers import StrOutputParser\n",
-    "from langchain_core.runnables import RunnablePassthrough\n",
-    "from langchain import hub"
+    "\n",
+    "# Importing WebBaseLoader for loading documents from the web\n",
+    "from langchain.document_loaders import WebBaseLoader  \n",
+    "\n",
+    "# Importing StrOutputParser for parsing output\n",
+    "from langchain_core.output_parsers import StrOutputParser  \n",
+    "\n",
+    "# Importing RunnablePassthrough for running tasks\n",
+    "from langchain_core.runnables import RunnablePassthrough  \n",
+    "\n",
+    "# Importing hub for accessing LangChain hub\n",
+    "from langchain import hub  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cf1aa04",
+   "metadata": {},
+   "source": [
+    "### Setting up API key for the LLM"
    ]
   },
   {
@@ -46,49 +84,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c39c29de",
+   "metadata": {},
+   "source": [
+    "### Scraping and Loading the data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "8028d1c7-0acf-47c5-b314-e4c00607fc0c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load data \n",
-    "url = \"https://medium.com/@singhjoban495/linear-regression-in-details-c0e27c4f24aa\"\n",
-    "loader  = WebBaseLoader(url)\n",
-    "docs = loader.load()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "77d6e04d-558a-4a60-8e9d-0de689bf7f69",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Split data into chunks\n",
-    "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000 ,chunk_overlap = 100)\n",
-    "texts = text_splitter.split_documents(docs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "df4981c5-b1a0-461f-8a78-176e3bd16424",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total lenght of the text :  6\n"
+     ]
     }
    ],
    "source": [
-    "len(texts)"
+    "def load_and_chunk_data(url):\n",
+    "    \"\"\"\n",
+    "    Load data from a given URL and split it into chunks.\n",
+    "\n",
+    "    Args:\n",
+    "        url (str): The URL of the document to load.\n",
+    "\n",
+    "    Returns:\n",
+    "        list: A list of text chunks.\n",
+    "    \"\"\"\n",
+    "    # Loading data from the url\n",
+    "    loader = WebBaseLoader(url)\n",
+    "    docs = loader.load()\n",
+    "\n",
+    "    # Splitting the data into chunks\n",
+    "    text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=100)\n",
+    "    texts = text_splitter.split_documents(docs)\n",
+    "    \n",
+    "    return texts\n",
+    "\n",
+    "# Example usage\n",
+    "url = \"https://medium.com/@singhjoban495/linear-regression-in-detailzs-c0e27c4f24aa\"\n",
+    "texts = load_and_chunk_data(url)\n",
+    "\n",
+    "print(\"Total lenght of the text : \",len(texts))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91fa6547",
+   "metadata": {},
+   "source": [
+    "### Creation of FAISS vector store (Retriever)\n",
+    "\n",
+    "A vector store is a specialized database designed to store and manage high-dimensional vectors, which are often used in machine learning and information retrieval tasks. These vectors typically represent data points in a continuous vector space, such as word embeddings, image features, or other types of embeddings generated by neural networks. Vector stores are optimized for efficient similarity search, allowing for quick retrieval of vectors that are close to a given query vector based on a chosen distance metric (e.g., Euclidean distance, cosine similarity).\n",
+    "\n",
+    "1. FAISS (Facebook AI Similarity Search)\n",
+    "Developed by Facebook AI, FAISS is a library for efficient similarity search and clustering of dense vectors. It provides various indexing methods and supports both CPU and GPU for fast computation.\n",
+    "2. Pinecone is a managed vector database service that provides scalable and efficient similarity search. It abstracts away the complexity of managing vector data and offers easy-to-use APIs.\n",
+    "\n",
+    "3. Weaviate is an open-source vector search engine that supports various data types and integrates with machine learning models. It provides a flexible schema and powerful search capabilities."
    ]
   },
   {
@@ -157,27 +215,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "73cfd8df-449d-49b9-a74f-fa81fa4661cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(docs)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 59,
    "id": "fd099111-ff81-4ae2-93cd-28f718fc75a6",
    "metadata": {},
@@ -200,6 +237,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "296cf546",
+   "metadata": {},
+   "source": [
+    "### Chaining everything together"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 62,
    "id": "2d44adc9-e250-46eb-9287-0122efe354c5",
@@ -215,13 +260,25 @@
     }
    ],
    "source": [
+    "# Pull the prompt from the hub\n",
     "prompt = hub.pull(\"rlm/rag-prompt\")\n",
+    "\n",
+    "# Initialize the language model\n",
     "llm = ChatOpenAI()\n",
     "\n",
     "def format_docs(docs):\n",
+    "    \"\"\"\n",
+    "    Format the retrieved documents into a single string with each document's content separated by two newlines.\n",
+    "\n",
+    "    Args:\n",
+    "        docs (list): List of Document objects.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: Formatted string containing the content of all documents.\n",
+    "    \"\"\"\n",
     "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
     "\n",
-    "\n",
+    "# Create the RAG chain by combining the ensemble retriever, prompt, language model, and output parser\n",
     "rag_chain = (\n",
     "    {\"context\": ensemble_retriever | format_docs, \"question\": RunnablePassthrough()}\n",
     "    | prompt\n",
@@ -250,19 +307,11 @@
    "source": [
     "rag_chain.invoke(query)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "012e3f37-ceb9-4f1f-bf1e-d4f086eca439",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -276,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
